; ModuleID = '/home/carl/AnghaBench/qmk_firmware/keyboards/ergo42/extr_serial.c_serial_write_byte.c'
source_filename = "/home/carl/AnghaBench/qmk_firmware/keyboards/ergo42/extr_serial.c_serial_write_byte.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32)* @serial_write_byte to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @serial_write_byte(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  store i32 8, i32* %3, align 4
  %4 = call i32 (...) @serial_output()
  br label %5

5:                                                ; preds = %19, %1
  %6 = load i32, i32* %3, align 4
  %7 = add nsw i32 %6, -1
  store i32 %7, i32* %3, align 4
  %8 = icmp ne i32 %6, 0
  br i1 %8, label %9, label %21

9:                                                ; preds = %5
  %10 = load i32, i32* %2, align 4
  %11 = load i32, i32* %3, align 4
  %12 = shl i32 1, %11
  %13 = and i32 %10, %12
  %14 = icmp ne i32 %13, 0
  br i1 %14, label %15, label %17

15:                                               ; preds = %9
  %16 = call i32 (...) @serial_high()
  br label %19

17:                                               ; preds = %9
  %18 = call i32 (...) @serial_low()
  br label %19

19:                                               ; preds = %17, %15
  %20 = call i32 (...) @serial_delay()
  br label %5

21:                                               ; preds = %5
  ret void
}

declare dso_local i32 @serial_output(...) #1

declare dso_local i32 @serial_high(...) #1

declare dso_local i32 @serial_low(...) #1

declare dso_local i32 @serial_delay(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
